# otus_mlops_cdc_model

./: .env.sample  cdc.ipynb  cdc_load.ipynb  cdc_train.ipynb  pyproject.toml  test_mlflow.py
inference/: predictor.py  run.py
train/: config.py  dataset.py  model.py  run.py
